[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/img/Tiles/tile_0286.png" type="Texture" id=1]
[ext_resource path="res://Assets/img/Tiles/tile_0287.png" type="Texture" id=2]
[ext_resource path="res://Assets/img/Tiles/tile_0285.png" type="Texture" id=3]
[ext_resource path="res://GUI/GameUI.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/lineDark17.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/transparentDark20.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/shadedDark22.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/kenvector_future.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://GUI/FontActions.tres" type="DynamicFont" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[node name="GameUI" type="CanvasLayer" groups=[
"diam",
]]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 366.0
margin_bottom = 90.0
color = Color( 0.490196, 0.490196, 0.490196, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_bottom = 90.0
color = Color( 0.490196, 0.490196, 0.490196, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Diams" type="CenterContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Diams"]
margin_right = 154.0
margin_bottom = 21.0
custom_constants/separation = 20

[node name="YellowDiam" type="HBoxContainer" parent="Diams/HBoxContainer"]
margin_right = 38.0
margin_bottom = 21.0

[node name="Diam" type="TextureRect" parent="Diams/HBoxContainer/YellowDiam"]
margin_right = 21.0
margin_bottom = 21.0
texture = ExtResource( 3 )

[node name="Count" type="Label" parent="Diams/HBoxContainer/YellowDiam"]
margin_left = 25.0
margin_top = 1.0
margin_right = 38.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 9 )
text = "0"

[node name="GreenDiam" type="HBoxContainer" parent="Diams/HBoxContainer"]
margin_left = 58.0
margin_right = 96.0
margin_bottom = 21.0

[node name="Diam" type="TextureRect" parent="Diams/HBoxContainer/GreenDiam"]
margin_right = 21.0
margin_bottom = 21.0
texture = ExtResource( 1 )

[node name="Count" type="Label" parent="Diams/HBoxContainer/GreenDiam"]
margin_left = 25.0
margin_top = 1.0
margin_right = 38.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 9 )
text = "0"

[node name="RedDiam" type="HBoxContainer" parent="Diams/HBoxContainer"]
margin_left = 116.0
margin_right = 154.0
margin_bottom = 21.0

[node name="Diam" type="TextureRect" parent="Diams/HBoxContainer/RedDiam"]
margin_right = 21.0
margin_bottom = 21.0
texture = ExtResource( 2 )

[node name="Count" type="Label" parent="Diams/HBoxContainer/RedDiam"]
margin_left = 25.0
margin_top = 1.0
margin_right = 38.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 9 )
text = "0"

[node name="Time" type="CenterContainer" parent="."]
anchor_left = 0.87
anchor_right = 0.87
margin_top = 32.0
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Time"]
margin_right = 57.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "00:00"
align = 1

[node name="Options" type="CenterContainer" parent="."]
anchor_left = 0.02
anchor_top = 0.95
anchor_right = 0.02
anchor_bottom = 0.95
margin_top = -40.0
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Options"]
margin_right = 48.0
margin_bottom = 48.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )

[connection signal="pressed" from="Options/TextureButton" to="." method="_on_TextureButton_pressed"]
